...
                        </barButtonItem>
                        <barButtonItem title="refresh" id="F99-av-JbU">
                            <connections>
                                <segue destination="BaM-6R-1gY" kind="show" id="Zk8-Z8-bch"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem title="actions" id="3vl-FP-p4F">
                            <connections>
                                <segue destination="HBp-Mg-QiH" kind="show" id="FKQ-HR-N1c"/>
                            </connections>
                        </barButtonItem>
                    </toolbarItems>
                    <navigationItem key="navigationItem" id="q8g-Yt-Ydt">
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RAp-WP-gqL">
                                <rect key="frame" x="75" y="173" width="209" height="71"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="controller with dynamic action"/>
                                <connections>
                                    <segue destination="cfL-SS-QpS" kind="show" id="ht2-HO-27e"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GU0-qU-gVr">
                                <rect key="frame" x="63" y="291" width="247" height="82"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="controller without dynamic action"/>
                                <connections>
                                    <segue destination="QFF-bI-hPk" kind="show" id="CJI-cL-xyh"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0n5-Lw-r88" customClass="Button" customModule="MHAppKit">
                                <rect key="frame" x="110" y="263" width="155" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="this should be enabled"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="disableIfCannotPerformActions" value="YES"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="testDynamicAction" destination="6X1-E2-jh7" eventType="touchUpInside" id="cwE-jV-aFD"/>
                                </connections>
...
